HDL ANT Deployment Package/retrieveUnpackaged/objects/Opportunity_Location__c.object
<CustomObject>
    <fields>
        <fullName>Location_City_State__c</fullName>
        <formula>Location__r.City__c &amp;&quot;, &quot;&amp; Location__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location City/State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Copia_Client_ID__c</fullName>
        <formula>Location__r.Copia_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Copia Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Opportunity_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Location</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Opportunity Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>